--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,9 +7,9 @@ lint:
   stage: lint
   parallel:
     matrix:
-      - PYTHON_VERSION: 3.10
-      - PYTHON_VERSION: 3.11
-      - PYTHON_VERSION: 3.12
+      - PYTHON_VERSION: "3.10"
+      - PYTHON_VERSION: "3.11"
+      - PYTHON_VERSION: "3.12"
   image: python:$PYTHON_VERSION
   script:
     - pip3 install yamllint
