--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,19 +1,19 @@
 ---
 stages:
-  - lint
+  # - lint
   - test
 
-lint:
-  stage: lint
-  parallel:
-    matrix:
-      - PYTHON_VERSION: "3.10"
-      - PYTHON_VERSION: "3.11"
-      - PYTHON_VERSION: "3.12"
-  image: python:$PYTHON_VERSION
-  script:
-    - pip3 install yamllint
-    - yamllint .
+# lint:
+#   stage: lint
+#   parallel:
+#     matrix:
+#       - PYTHON_VERSION: "3.10"
+#       - PYTHON_VERSION: "3.11"
+#       - PYTHON_VERSION: "3.12"
+#   image: python:$PYTHON_VERSION
+#   script:
+#     - pip3 install yamllint
+#     - yamllint .
 
 molecule:
   stage: test
