--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,7 @@ molecule:
   #     - MOLECULE_DISTRO: ubuntu1604
   #     - MOLECULE_DISTRO: ubuntu2204
   script:
+    - apt-get install -y docker.io
     - docker version
     - apt-get update && apt-get install -y python3-pip
     - pip3 install ansible molecule molecule-plugins[docker] docker pytest pytest-testinfra
