--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,18 @@
 ---
+
+services:
+  - name: docker:dind
+    command: ["/bin/sh", "-c", "[[ -z $CERTIFICATE_URL ]] && ( echo Injecting no certificate && dockerd-entrypoint.sh || exit ) || ( echo Injecting certificate $CERTIFICATE_URL && wget $CERTIFICATE_URL -O /usr/local/share/ca-certificates/cert.crt && update-ca-certificates && dockerd-entrypoint.sh || exit )"]
+
+variables:
+  ## Uncomment this to inject a self-signed certificate into the docker:dind service
+  CERTIFICATE_URL: http://10.255.255.2/corp-network.avm.crt
+  #  # disable TLS; see: https://gitlab.com/gitlab-org/gitlab-runner/issues/1350#note_199840999 and https://about.gitlab.com/2019/07/31/docker-in-docker-with-docker-19-dot-03/
+  DOCKER_TLS_CERTDIR: ""
+  DOCKER_HOST: "tcp://docker:2375"
+  DOCKER_DRIVER: overlay2
+
+
 stages:
   # - lint
   - test
@@ -18,15 +32,11 @@ stages:
 molecule:
   stage: test
   image: python:3.10
-  services:
-    - docker:dind
   variables:
     #DOCKER_DRIVER: overlay2
     PY_COLORS: '1'
     ANSIBLE_FORCE_COLOR: '1'
     MOLECULE_DISTRO: ubuntu2204
-    DOCKER_HOST: "tcp://docker:2375"
-    DOCKER_DRIVER: overlay2
   # parallel:
   #   matrix:
   #     - MOLECULE_DISTRO: ubuntu1604
