--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,9 +15,10 @@ lint:
   stage: lint
   parallel:
     matrix:
-      - PYTHON_VERSION: "3.10"
-      - PYTHON_VERSION: "3.11"
-      - PYTHON_VERSION: "3.12"
+      - PYTHON_VERSION:
+        - "3.10"
+        - "3.11"
+        - "3.12"
   image: python:$PYTHON_VERSION
   script:
     - pip3 install yamllint
