actually use different python versions

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ lint:
 
 molecule:
   stage: test
-  image: python:3.10
+  image: python:$PYTHON_VERSION
   variables:
     PY_COLORS: '1'
     ANSIBLE_FORCE_COLOR: '1'
