--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,8 @@ services:
   - name: docker:dind
 
 variables:
-  #  # disable TLS; see: https://gitlab.com/gitlab-org/gitlab-runner/issues/1350#note_199840999 and https://about.gitlab.com/2019/07/31/docker-in-docker-with-docker-19-dot-03/
+  # Disable TLS.
+  # See: https://gitlab.com/gitlab-org/gitlab-runner/issues/1350#note_199840999 and https://about.gitlab.com/2019/07/31/docker-in-docker-with-docker-19-dot-03/
   DOCKER_TLS_CERTDIR: ""
   DOCKER_HOST: "tcp://docker:2375"
 
@@ -16,9 +17,9 @@ lint:
   parallel:
     matrix:
       - PYTHON_VERSION:
-        - "3.10"
+        - "3.10"  # Ubuntu 22.04 ships with this.
         - "3.11"
-        - "3.12"
+        - "3.12"  # Ubuntu 24.04 ships with this.
         - "3.13"
   image: python:$PYTHON_VERSION
   script:
@@ -35,9 +36,9 @@ molecule:
           - ubuntu2204
           - ubuntu2404
         PYTHON_VERSION:
-          - "3.10"
+          - "3.10"  # Ubuntu 22.04 ships with this.
           - "3.11"
-          - "3.12"
+          - "3.12"  # Ubuntu 24.04 ships with this.
           - "3.13"
   image: python:$PYTHON_VERSION
   variables:
