--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ stages:
   - lint
   - test
 
-lint:
+lint YAML:
   stage: lint
   parallel:
     matrix:
@@ -23,8 +23,13 @@ lint:
         - "3.13"
   image: python:$PYTHON_VERSION
   script:
+    - echo "Installing dependencies..."
     - pip3 install yamllint
+    - echo "Installed dependencies."
+
+    - echo "Linting YAML..."
     - yamllint .
+    - echo "Linted YAML."
   allow_failure: true
 
 molecule:
@@ -45,8 +50,13 @@ molecule:
     PY_COLORS: '1'
     ANSIBLE_FORCE_COLOR: '1'
   script:
+    - echo "Installing dependencies..."
     - apt-get update
     - apt-get install -y docker.io python3-pip
     - docker version
-    - pip3 install ansible molecule molecule-plugins[docker] docker pytest pytest-testinfra
+    - pip3 install --requirement requirements.txt
+    - echo "Installed dependencies."
+    
+    - echo "Testing with Molecule..."
     - molecule test --all
+    - echo "Tested with Molecule."
