feat(ci): ansible-lint

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,26 @@ lint YAML:
     - echo "Linted YAML."
   allow_failure: true
 
+lint Ansible:
+  stage: lint
+  parallel:
+    matrix:
+      - PYTHON_VERSION:
+        - "3.10"  # Ubuntu 22.04 ships with this.
+        - "3.11"
+        - "3.12"  # Ubuntu 24.04 ships with this.
+        - "3.13"
+  image: python:$PYTHON_VERSION
+  script:
+    - echo "Installing dependencies..."
+    - pip3 install ansible-lint
+    - echo "Installed dependencies."
+
+    - echo "Linting Ansible..."
+    - ansible-lint
+    - echo "Linted Ansible."
+  allow_failure: true
+
 molecule:
   stage: test
   parallel:
