--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 ansible==8.2.0
 molecule==5.1.0
 molecule-plugins[docker]==23.5.0
-pytest-testinfra==8.1.0
+
 yamllint==1.32.0
 ansible-lint==6.17.2
+
+pytest==8.3.5
+pytest-testinfra==10.1.1
