wip: collection are not needed

--- a/requirements.yaml
+++ b/requirements.yaml
@@ -1,11 +1,11 @@
 ---
-collections:
-  # Already needed for molecule.
-  - name: community.docker
-    version: 2.1.1
-  # Already needed for molecule.
-  - name: ansible.posix  
-    version: 1.5.4
+# collections:
+#   # Already needed for molecule.
+#   - name: community.docker
+#     version: 2.1.1
+#   # Already needed for molecule.
+#   - name: ansible.posix  
+#     version: 1.5.4
 
 # roles:
 #   - name: geerlingguy.docker
