fix: ansible-lint only on current directory

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ lint Ansible:
     - echo "Installed dependencies."
 
     - echo "Linting Ansible..."
-    - ansible-lint
+    - ansible-lint .
     - echo "Linted Ansible."
   allow_failure: true
 
